[package]
name = "bishe1"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1"
sha2 = "0.10"
rand = "0.8"
uuid = { version = "1", features = ["v4"] }
log = "0.4"
env_logger = "0.10"
thiserror = "1"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
dashmap = "5"
hex = "0.4.3"
reed_solomon_rs = { path = "deps/reed_solomon_rs" }
